{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 1718,
  "lineage": "6716cdb9-1d61-e65c-893a-ef2e0af3463a",
  "resources": [
    {
      "module": "module.k8s",
      "mode": "data",
      "type": "aws_eip",
      "name": "k8s_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f8475a569ea37bf5",
            "domain": "vpc",
            "id": "eipalloc-0f244a190fec77328",
            "network_interface_id": "eni-02f4156915d7ffb9f",
            "network_interface_owner_id": "777829610915",
            "private_dns": "ip-10-240-0-213.us-west-2.compute.internal",
            "private_ip": "10.240.0.213",
            "public_dns": "ec2-35-81-107-92.us-west-2.compute.amazonaws.com",
            "public_ip": "35.81.107.92",
            "public_ipv4_pool": "amazon"
          }
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_eip",
      "name": "k8s_external",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f8475a569ea37bf5",
            "domain": "vpc",
            "id": "eipalloc-0f244a190fec77328",
            "network_interface": "eni-02f4156915d7ffb9f",
            "private_dns": "ip-10-240-0-213.us-west-2.compute.internal",
            "private_ip": "10.240.0.213",
            "public_dns": "ec2-35-81-107-92.us-west-2.compute.amazonaws.com",
            "public_ip": "35.81.107.92",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_instance",
      "name": "controller",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032ed93ef3b2a867c",
            "arn": "arn:aws:ec2:us-west-2:777829610915:instance/i-0656d873b1b51eb74",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0656d873b1b51eb74",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s_playground_provided_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05e35b8fe8e42065b",
            "private_dns": "ip-10-240-0-10.us-west-2.compute.internal",
            "private_ip": "10.240.0.10",
            "public_dns": "ec2-34-219-243-52.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.243.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "volume_id": "vol-0a8f39d94584be69d",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d7735442016717a3",
            "tags": {
              "controller": "true",
              "kubernetes-the-hard-way": "true",
              "name": "controller0",
              "type": "controller"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c644452177990d3f"
            ]
          },
          "dependencies": [
            "module.k8s.aws_security_group.k8s",
            "module.k8s.aws_subnet.k8s",
            "module.k8s.aws_vpc.k8s",
            "module.k8s.aws_vpc_ipv4_cidr_block_association.cluster",
            "module.key.aws_key_pair.k8s_user_provided_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032ed93ef3b2a867c",
            "arn": "arn:aws:ec2:us-west-2:777829610915:instance/i-0bb10a10fce83d003",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb10a10fce83d003",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s_playground_provided_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ac11e6a0c206b741",
            "private_dns": "ip-10-240-0-11.us-west-2.compute.internal",
            "private_ip": "10.240.0.11",
            "public_dns": "ec2-52-88-246-192.us-west-2.compute.amazonaws.com",
            "public_ip": "52.88.246.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "volume_id": "vol-019abd09114bc53ee",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d7735442016717a3",
            "tags": {
              "controller": "true",
              "kubernetes-the-hard-way": "true",
              "name": "controller1",
              "type": "controller"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c644452177990d3f"
            ]
          },
          "dependencies": [
            "module.k8s.aws_security_group.k8s",
            "module.k8s.aws_subnet.k8s",
            "module.k8s.aws_vpc.k8s",
            "module.k8s.aws_vpc_ipv4_cidr_block_association.cluster",
            "module.key.aws_key_pair.k8s_user_provided_key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032ed93ef3b2a867c",
            "arn": "arn:aws:ec2:us-west-2:777829610915:instance/i-0c620e9ac4ebb445d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c620e9ac4ebb445d",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "k8s_playground_provided_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08f30d56f88d97713",
            "private_dns": "ip-10-240-0-12.us-west-2.compute.internal",
            "private_ip": "10.240.0.12",
            "public_dns": "ec2-54-191-161-153.us-west-2.compute.amazonaws.com",
            "public_ip": "54.191.161.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "volume_id": "vol-0df102a3034f15227",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d7735442016717a3",
            "tags": {
              "controller": "true",
              "kubernetes-the-hard-way": "true",
              "name": "controller2",
              "type": "controller"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c644452177990d3f"
            ]
          },
          "dependencies": [
            "module.k8s.aws_security_group.k8s",
            "module.k8s.aws_subnet.k8s",
            "module.k8s.aws_vpc.k8s",
            "module.k8s.aws_vpc_ipv4_cidr_block_association.cluster",
            "module.key.aws_key_pair.k8s_user_provided_key"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032ed93ef3b2a867c",
            "arn": "arn:aws:ec2:us-west-2:777829610915:instance/i-0a669ce5db8d0d6f3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a669ce5db8d0d6f3",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "k8s_playground_provided_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00c9e02438b902322",
            "private_dns": "ip-10-240-0-20.us-west-2.compute.internal",
            "private_ip": "10.240.0.20",
            "public_dns": "ec2-34-220-69-236.us-west-2.compute.amazonaws.com",
            "public_ip": "34.220.69.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "volume_id": "vol-0124105e2182a3c07",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d7735442016717a3",
            "tags": {
              "kubernetes-the-hard-way": "true",
              "name": "worker0",
              "pod_cidr": "10.200.0.0/24",
              "type": "worker",
              "worker": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c644452177990d3f"
            ]
          },
          "dependencies": [
            "module.k8s.aws_security_group.k8s",
            "module.k8s.aws_subnet.k8s",
            "module.k8s.aws_vpc.k8s",
            "module.k8s.aws_vpc_ipv4_cidr_block_association.cluster",
            "module.key.aws_key_pair.k8s_user_provided_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032ed93ef3b2a867c",
            "arn": "arn:aws:ec2:us-west-2:777829610915:instance/i-0fa49a28fa2932f44",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa49a28fa2932f44",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "k8s_playground_provided_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-038d7812a34002256",
            "private_dns": "ip-10-240-0-21.us-west-2.compute.internal",
            "private_ip": "10.240.0.21",
            "public_dns": "ec2-54-202-13-183.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.13.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "volume_id": "vol-0cae43e95608dd57f",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d7735442016717a3",
            "tags": {
              "kubernetes-the-hard-way": "true",
              "name": "worker1",
              "pod_cidr": "10.200.1.0/24",
              "type": "worker",
              "worker": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c644452177990d3f"
            ]
          },
          "dependencies": [
            "module.k8s.aws_security_group.k8s",
            "module.k8s.aws_subnet.k8s",
            "module.k8s.aws_vpc.k8s",
            "module.k8s.aws_vpc_ipv4_cidr_block_association.cluster",
            "module.key.aws_key_pair.k8s_user_provided_key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032ed93ef3b2a867c",
            "arn": "arn:aws:ec2:us-west-2:777829610915:instance/i-08a5c1d6e6d7cf993",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a5c1d6e6d7cf993",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "k8s_playground_provided_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07c6c39ada95baee9",
            "private_dns": "ip-10-240-0-22.us-west-2.compute.internal",
            "private_ip": "10.240.0.22",
            "public_dns": "ec2-54-212-242-126.us-west-2.compute.amazonaws.com",
            "public_ip": "54.212.242.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 600,
                "volume_id": "vol-09302a2247dc99f14",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d7735442016717a3",
            "tags": {
              "kubernetes-the-hard-way": "true",
              "name": "worker2",
              "pod_cidr": "10.200.2.0/24",
              "type": "worker",
              "worker": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c644452177990d3f"
            ]
          },
          "dependencies": [
            "module.k8s.aws_security_group.k8s",
            "module.k8s.aws_subnet.k8s",
            "module.k8s.aws_vpc.k8s",
            "module.k8s.aws_vpc_ipv4_cidr_block_association.cluster",
            "module.key.aws_key_pair.k8s_user_provided_key"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:internet-gateway/igw-0ca81d702616a8935",
            "id": "igw-0ca81d702616a8935",
            "owner_id": "777829610915",
            "tags": {
              "Name": "k8s"
            },
            "vpc_id": "vpc-0f161352b8527b5ac"
          },
          "dependencies": [
            "module.k8s.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_lb",
      "name": "k8s",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:777829610915:loadbalancer/net/k8s-the-hard-way-load-balancer/510a65e50876cab2",
            "arn_suffix": "net/k8s-the-hard-way-load-balancer/510a65e50876cab2",
            "dns_name": "k8s-the-hard-way-load-balancer-510a65e50876cab2.elb.us-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:777829610915:loadbalancer/net/k8s-the-hard-way-load-balancer/510a65e50876cab2",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "k8s-the-hard-way-load-balancer",
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-0f244a190fec77328",
                "subnet_id": "subnet-0d7735442016717a3"
              }
            ],
            "subnets": [
              "subnet-0d7735442016717a3"
            ],
            "vpc_id": "vpc-0f161352b8527b5ac",
            "zone_id": "Z18D5FSROUN65G"
          },
          "dependencies": [
            "module.k8s.aws_eip.k8s_external",
            "module.k8s.aws_subnet.k8s",
            "module.k8s.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "k8s",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:777829610915:listener/net/k8s-the-hard-way-load-balancer/510a65e50876cab2/045b97898c0910c7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:777829610915:targetgroup/k8s-the-hard-way-lb-tgt-api-srv/0a03be752b304343",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:777829610915:listener/net/k8s-the-hard-way-load-balancer/510a65e50876cab2/045b97898c0910c7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:777829610915:loadbalancer/net/k8s-the-hard-way-load-balancer/510a65e50876cab2",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.k8s.aws_eip.k8s_external",
            "module.k8s.aws_lb.k8s",
            "module.k8s.aws_lb_target_group.k8s_api_server",
            "module.k8s.aws_subnet.k8s",
            "module.k8s.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "k8s_api_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:777829610915:targetgroup/k8s-the-hard-way-lb-tgt-api-srv/0a03be752b304343",
            "arn_suffix": "targetgroup/k8s-the-hard-way-lb-tgt-api-srv/0a03be752b304343",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:777829610915:targetgroup/k8s-the-hard-way-lb-tgt-api-srv/0a03be752b304343",
            "lambda_multi_value_headers_enabled": false,
            "name": "k8s-the-hard-way-lb-tgt-api-srv",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f161352b8527b5ac"
          },
          "dependencies": [
            "module.k8s.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "k8s-controllers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:777829610915:targetgroup/k8s-the-hard-way-lb-tgt-api-srv/0a03be752b304343-20210627221643729000000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:777829610915:targetgroup/k8s-the-hard-way-lb-tgt-api-srv/0a03be752b304343",
            "target_id": "i-0656d873b1b51eb74"
          },
          "dependencies": [
            "module.k8s.aws_instance.controller",
            "module.k8s.aws_lb_target_group.k8s_api_server",
            "module.k8s.aws_security_group.k8s",
            "module.k8s.aws_subnet.k8s",
            "module.k8s.aws_vpc.k8s",
            "module.k8s.aws_vpc_ipv4_cidr_block_association.cluster",
            "module.key.aws_key_pair.k8s_user_provided_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:777829610915:targetgroup/k8s-the-hard-way-lb-tgt-api-srv/0a03be752b304343-20210627221643667200000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:777829610915:targetgroup/k8s-the-hard-way-lb-tgt-api-srv/0a03be752b304343",
            "target_id": "i-0bb10a10fce83d003"
          },
          "dependencies": [
            "module.k8s.aws_instance.controller",
            "module.k8s.aws_lb_target_group.k8s_api_server",
            "module.k8s.aws_security_group.k8s",
            "module.k8s.aws_subnet.k8s",
            "module.k8s.aws_vpc.k8s",
            "module.k8s.aws_vpc_ipv4_cidr_block_association.cluster",
            "module.key.aws_key_pair.k8s_user_provided_key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:777829610915:targetgroup/k8s-the-hard-way-lb-tgt-api-srv/0a03be752b304343-20210627221643812000000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:777829610915:targetgroup/k8s-the-hard-way-lb-tgt-api-srv/0a03be752b304343",
            "target_id": "i-0c620e9ac4ebb445d"
          },
          "dependencies": [
            "module.k8s.aws_instance.controller",
            "module.k8s.aws_lb_target_group.k8s_api_server",
            "module.k8s.aws_security_group.k8s",
            "module.k8s.aws_subnet.k8s",
            "module.k8s.aws_vpc.k8s",
            "module.k8s.aws_vpc_ipv4_cidr_block_association.cluster",
            "module.key.aws_key_pair.k8s_user_provided_key"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_internet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ca81d702616a8935",
            "id": "r-rtb-07828f72e8dd4afc51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07828f72e8dd4afc5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.k8s.aws_internet_gateway.k8s",
            "module.k8s.aws_route_table.k8s",
            "module.k8s.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_route",
      "name": "pod_cidr",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.200.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07828f72e8dd4afc5945138918",
            "instance_id": "i-0a669ce5db8d0d6f3",
            "instance_owner_id": "777829610915",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-00c9e02438b902322",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07828f72e8dd4afc5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.k8s.aws_instance.worker",
            "module.k8s.aws_route_table.k8s",
            "module.k8s.aws_subnet.cluster"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.200.1.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07828f72e8dd4afc54077485891",
            "instance_id": "i-0fa49a28fa2932f44",
            "instance_owner_id": "777829610915",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-038d7812a34002256",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07828f72e8dd4afc5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.k8s.aws_instance.worker",
            "module.k8s.aws_route_table.k8s",
            "module.k8s.aws_subnet.cluster"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.200.2.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07828f72e8dd4afc51973226989",
            "instance_id": "i-08a5c1d6e6d7cf993",
            "instance_owner_id": "777829610915",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-07c6c39ada95baee9",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07828f72e8dd4afc5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.k8s.aws_instance.worker",
            "module.k8s.aws_route_table.k8s",
            "module.k8s.aws_subnet.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07828f72e8dd4afc5",
            "owner_id": "777829610915",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca81d702616a8935",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.200.0.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0a669ce5db8d0d6f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-00c9e02438b902322",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.200.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0fa49a28fa2932f44",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-038d7812a34002256",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.200.2.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-08a5c1d6e6d7cf993",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-07c6c39ada95baee9",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "K8s Basic VPC Route Table"
            },
            "vpc_id": "vpc-0f161352b8527b5ac"
          },
          "dependencies": [
            "module.k8s.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:security-group/sg-0c644452177990d3f",
            "description": "Single security group for all K8s The Hard Way needs - for now...",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c644452177990d3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.240.0.0/24",
                  "10.200.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "73.78.216.54/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "k8s",
            "name_prefix": "",
            "owner_id": "777829610915",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0f161352b8527b5ac"
          },
          "dependencies": [
            "module.k8s.aws_vpc.k8s",
            "module.k8s.aws_vpc_ipv4_cidr_block_association.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:subnet/subnet-0181c21503d2ccf09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.200.0.0/24",
            "id": "subnet-0181c21503d2ccf09",
            "map_public_ip_on_launch": false,
            "owner_id": "777829610915",
            "tags": {
              "Name": "k8s"
            },
            "vpc_id": "vpc-0f161352b8527b5ac"
          },
          "dependencies": [
            "module.k8s.aws_vpc.k8s"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:subnet/subnet-0364a98053631fa9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.200.1.0/24",
            "id": "subnet-0364a98053631fa9f",
            "map_public_ip_on_launch": false,
            "owner_id": "777829610915",
            "tags": {
              "Name": "k8s"
            },
            "vpc_id": "vpc-0f161352b8527b5ac"
          },
          "dependencies": [
            "module.k8s.aws_vpc.k8s"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:subnet/subnet-012a7c2766ac03467",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.200.2.0/24",
            "id": "subnet-012a7c2766ac03467",
            "map_public_ip_on_launch": false,
            "owner_id": "777829610915",
            "tags": {
              "Name": "k8s"
            },
            "vpc_id": "vpc-0f161352b8527b5ac"
          },
          "dependencies": [
            "module.k8s.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:subnet/subnet-0d7735442016717a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.240.0.0/24",
            "id": "subnet-0d7735442016717a3",
            "map_public_ip_on_launch": false,
            "owner_id": "777829610915",
            "tags": {
              "Name": "k8s"
            },
            "vpc_id": "vpc-0f161352b8527b5ac"
          },
          "dependencies": [
            "module.k8s.aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "module": "module.k8s",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:vpc/vpc-0f161352b8527b5ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.240.0.0/24",
            "default_network_acl_id": "acl-0206c83899a5be7d3",
            "default_route_table_id": "rtb-058dc9e2b2d1e3cd2",
            "default_security_group_id": "sg-0d139260ed98d456f",
            "dhcp_options_id": "dopt-e60db983",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f161352b8527b5ac",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-058dc9e2b2d1e3cd2",
            "owner_id": "777829610915"
          }
        }
      ]
    }
  ]
}